# studdybuddy-

./: .env.example  .gitignore  COMPLETION_REPORT.md  CONCEPTUAL_MAP.md  CONTENT_EXTRACTION_FEATURES.md  DEMO_OUTPUT.txt  EXTRACTION_DEMO.txt  FEATURES.md  FUNCTIONS_A_TO_Z.md  IMPLEMENTATION_RESPONSE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_CURRENT.md  check_db.py  demo.sh  demo_phase1.py  index_pdf.py  pyproject.toml  studybuddy.sh  test_real_pdf.py
cli/: main.py
docs/: CN_V_TRIGEMINAL_COMPLETE.md  CRANIAL_NERVES_III_XII.md  FUNDAMENTAL_NEUROSURGICAL_KNOWLEDGE_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_PART2.md  IMPLEMENTATION_GUIDE_PART3.md  IMPLEMENTATION_PLAN.md  LEVEL3_ANATOMICAL_KNOWLEDGE_COMPLETE.md  LEVEL3_FUNCTIONAL_NEUROANATOMY_COMPLETE.md  LEVEL3_SKULL_BASE_FORAMINA_COMPLETE.md  LEVEL3_SPINE_SPINAL_CORD_COMPLETE.md  LEVEL3_VENTRICULAR_SYSTEM_COMPLETE.md  LEVEL3_WHITE_MATTER_TRACTS_COMPLETE.md  LEVEL7_COMPLEX_NEUROANATOMICAL_IMAGE_ANALYSIS_COMPLETE.md  LLM_ANALYSIS_INDEX.md  LLM_DECISION_MATRIX.md  LLM_EXECUTIVE_SUMMARY.md  LLM_IMPLEMENTATION_EXAMPLES.md  LLM_MAXIMIZATION_ANALYSIS.md  LLM_VISUAL_SUMMARY.md  MEDICAL_ONTOLOGY_STRUCTURE_COMPLETE.md  README_IMPLEMENTATION_GUIDE.md
generation/: chapter_synthesizer.py
reference_library/: database.py  flashcard_manager.py  library_manager.py  models.py  notes_manager.py  pdf_extractor.py  pdf_indexer.py  study_tracker.py
search/: search_service.py
tests/: test_config.py  test_exceptions.py  test_logger.py  test_models.py  test_security.py  test_smoke.py
utils/: config.py  exceptions.py  logger.py  security.py
