[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studybuddy"
version = "0.1.0"
description = "AI-Powered Neurosurgical Knowledge Base and Chapter Generation System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dr. Rami Hatoum", email = "rami@example.com"}
]
keywords = ["neurosurgery", "medical", "ai", "knowledge-base", "chapter-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core frameworks
    "anthropic>=0.18.0",
    "openai>=1.0.0",

    # Database and ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # PostgreSQL and vector support
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",

    # Configuration and validation (Neurocore Lesson 9)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Caching (Neurocore Lesson 4)
    "redis>=5.0.0",
    "fakeredis>=2.20.0",  # For testing

    # HTTP and API clients
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",

    # PDF processing
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=3.17.0",

    # Image processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # PubMed and research
    "biopython>=1.81",

    # CLI and UI
    "click>=8.1.0",
    "rich>=13.6.0",
    "typer>=0.9.0",

    # Logging and monitoring
    "structlog>=23.2.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    # Testing (Neurocore Lesson 6)
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",

    # Code quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",

    # Type stubs
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "types-python-dateutil>=2.8.0",

    # Development tools
    "ipython>=8.17.0",
    "ipdb>=0.13.0",
    "jupyter>=1.0.0",
]

production = [
    # Production server
    "gunicorn>=21.2.0",
    "uvicorn>=0.24.0",

    # Monitoring (optional)
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/ramihatoum/studybuddy"
Documentation = "https://github.com/ramihatoum/studybuddy/tree/main/docs"
Repository = "https://github.com/ramihatoum/studybuddy"
"Bug Tracker" = "https://github.com/ramihatoum/studybuddy/issues"

[project.scripts]
studybuddy = "cli.main:app"

[tool.setuptools]
packages = [
    "utils",
    "reference_library",
    "search",
    "research",
    "images",
    "generation",
    "ai",
    "alive_chapters",
    "cli",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Strict mode
addopts = """
    -v
    --strict-markers
    --strict-config
    --tb=short
    --cov=.
    --cov-report=html
    --cov-report=term-missing
    --cov-fail-under=80
"""

# Custom markers (Neurocore Lesson 6: Organized testing)
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (slower, may use database)",
    "performance: Performance benchmarks",
    "slow: Slow tests (> 1 second)",
    "requires_api: Tests that require API keys",
    "requires_redis: Tests that require Redis",
    "requires_postgres: Tests that require PostgreSQL",
]

# Async support
asyncio_mode = "auto"

# Timeout for tests (Neurocore Lesson 7)
timeout = 300
timeout_method = "thread"

# Coverage
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/archive/*", "*/.venv/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "biopython.*",
    "redis.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring (we use type hints)
    "R0903",  # too-few-public-methods (Pydantic models)
    "R0913",  # too-many-arguments (common in constructors)
]

[tool.pylint.design]
max-args = 10
max-attributes = 15
